hphp/hack/test/typecheck/using/using_bad_undefined.php.exp
File "using_bad_undefined.php", line 26, characters 3-4:
The variable $x is defined (Naming[2007])
  File "using_bad_undefined.php", line 22, characters 10-11:
  But in a different scope
File "using_bad_undefined.php", line 26, characters 3-4:
Undefined variable: $x (Naming[2050])
File "using_bad_undefined.php", line 39, characters 3-4:
The variable $x is defined (Naming[2007])
  File "using_bad_undefined.php", line 32, characters 5-6:
  But in a different scope
File "using_bad_undefined.php", line 39, characters 3-4:
Undefined variable: $x (Naming[2050])
